@@ -1,6 +1,6 @@
 <?php $this->pageTitle=Yii::app()->name . ' - '.Yii::t("UserModule.user", "Restore");
 $this->breadcrumbs=array(
-	Yii::t("UserModule.user", "Login") => array('/user/login'),
+	Yii::t("UserModule.user", "Login") => array('/user/user/login'),
 	Yii::t("UserModule.user", "Restore"),
 );
 ?>
@@ -21,7 +21,7 @@ $this->breadcrumbs=array(
 	<div class="row">
 		<?php echo CHtml::activeLabel($form,'login_or_email'); ?>
 		<?php echo CHtml::activeTextField($form,'login_or_email') ?>
-		<p class="hint"><?php echo Yii::t("UserModule.user","Please enter your login or email addres."); ?></p>
+		<p class="hint"><?php echo Yii::t("UserModule.user","Please enter your login or email address."); ?></p>
 	</div>
 	
 	<div class="row submit">
